k8s/prod/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.global-static-ip-name: "canary-ingress"
    certmanager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - chirpingcanary.co.uk
        - www.chirpingcanary.co.uk
      secretName: chirpingcanary-co-uk
  rules:
    - host: chirpingcanary.co.uk
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: view-clusterip-service
              servicePort: 3000
          - path: /api/(.*)
            backend:
              serviceName: subscription-controller-clusterip-service
              servicePort: 5000
    - host: www.chirpingcanary.co.uk
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: view-clusterip-service
              servicePort: 3000
          - path: /api/(.*)
            backend:
              serviceName: subscription-controller-clusterip-service
              servicePort: 5000
